Update hiệu ứng

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                         <div class="container">
                             <div class="hero-content" data-aos="fade-right" data-aos-duration="1000">
                                 <span class="hero-tagline" data-aos="fade-up" data-aos-delay="100">Nâng cao kỹ năng với PLT Solutions</span>
-                                <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Tìm kiếm các khóa học & kỹ năng trực tuyến tốt nhất</h1>
+                                <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Tìm kiếm các khóa học trực tuyến tốt nhất</h1>
                                 <p class="hero-description" data-aos="fade-up" data-aos-delay="300">
                                     Khám phá hàng ngàn khóa học chất lượng cao từ các chuyên gia hàng đầu.
-                                    Học hỏi những kiến thức mới và mở rộng cơ hội nghề nghiệp của bạn ngay hôm nay.
+                                    Học hỏi những kiến thức mới và cơ hội nghề nghiệp của bạn ngay hôm nay.
                                 </p>
                                 <div class="hero-buttons" data-aos="fade-up" data-aos-delay="400">
                                     <a href="courses.html" class="btn btn-primary">Khám phá khóa học</a>
@@ -134,7 +134,7 @@
                         <div class="container">
                             <div class="hero-content" data-aos="zoom-in" data-aos-duration="1000">
                                 <span class="hero-tagline" data-aos="fade-up" data-aos-delay="100">Học hỏi từ những chuyên gia</span>
-                                <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Đội ngũ giảng viên tận tâm, giàu kinh nghiệm</h1>
+                                <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Đội Ngũ Giảng Viên Tận Tâm, Giàu Kinh Nghiệm</h1>
                                 <p class="hero-description" data-aos="fade-up" data-aos-delay="300">
                                     Chúng tôi tự hào với đội ngũ giảng viên hàng đầu, luôn sẵn sàng truyền đạt
                                     kiến thức và kinh nghiệm thực chiến cho từng học viên.
@@ -224,7 +224,7 @@
             <div class="container">
                 <div class="about-content-grid-home">
                     <div class="about-image-home" data-aos="fade-right" data-aos-duration="1000">
-                        <img src="image/about-us-home.jpg" alt="Về chúng tôi - PLT Solutions">
+                        <img src="image/about1.png" alt="Về chúng tôi - PLT Solutions">
                     </div>
                     <div class="about-text-home" data-aos="fade-left" data-aos-duration="1000">
                         <span class="section-tagline">Về chúng tôi</span>
@@ -244,7 +244,7 @@
                             <li><i class="fas fa-check-circle" aria-hidden="true"></i> Cộng đồng học tập năng động</li>
                             <li><i class="fas fa-check-circle" aria-hidden="true"></i> Hỗ trợ học viên tận tình</li>
                         </ul>
-                        <a href="about.html" class="btn btn-primary" data-aos="fade-up" data-aos-delay="100">Tìm hiểu thêm</a>
+                        <a href="about.html" class="btn btn-primary " data-aos="fade-up" data-aos-delay="100">Tìm hiểu thêm</a>
                     </div>
                 </div>
             </div>
