--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
         <section class="feature-category-section section-padding">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
-                    <span class="section-tagline">Các tính năng chính</span>
-                    <h2 class="section-title">Những gì chúng tôi cung cấp</h2>
+                    <span class="section-tagline">Các Tính Năng Chính</span>
+                    <h2 class="section-title">Những Gì Chúng Tôi Cung Cấp</h2>
                     <p class="section-description">
                         Khám phá các lợi ích và điểm nổi bật khi bạn tham gia học tập cùng PLT Solutions,
                         từ các khóa học đa dạng đến hỗ trợ tận tình.
@@ -227,7 +227,7 @@
                         <img src="image/about1.png" alt="Về chúng tôi - PLT Solutions">
                     </div>
                     <div class="about-text-home" data-aos="fade-left" data-aos-duration="1000">
-                        <span class="section-tagline">Về chúng tôi</span>
+                        <span class="section-tagline">Về Chúng Tôi</span>
                         <h2 class="section-title">Nền tảng giáo dục trực tuyến tốt nhất</h2>
                         <p>
                             PLT Solutions là một nền tảng học tập trực tuyến tiên phong, mang sứ mệnh
@@ -252,8 +252,8 @@
         <section class="popular-courses-section section-padding bg-light">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
-                    <span class="section-tagline">Khóa học phổ biến</span>
-                    <h2 class="section-title">Khám phá các khóa học hàng đầu</h2>
+                    <span class="section-tagline">Khóa Học Phổ Biến</span>
+                    <h2 class="section-title">Khám Phá Các Khóa Học Hàng Đầu</h2>
                     <p class="section-description">
                         Chúng tôi cung cấp những khóa học được yêu thích nhất, giúp bạn trang bị
                         kiến thức và kỹ năng cần thiết cho sự nghiệp và phát triển cá nhân.
@@ -413,8 +413,8 @@
         <section class="why-choose-us-section section-padding">
             <div class="container">
                 <div class="section-heading is-white" data-aos="fade-down">
-                    <span class="section-tagline">Tại sao chọn chúng tôi</span>
-                    <h2 class="section-title">Lý do bạn nên học cùng PLT Solutions</h2>
+                    <span class="section-tagline">Tại Sao Chọn Chúng Tôi</span>
+                    <h2 class="section-title">Lý Do Bạn Nên Học Cùng PLT Solutions</h2>
                     <p class="section-description">
                         Chúng tôi cam kết mang đến trải nghiệm học tập vượt trội với những ưu điểm độc đáo,
                         giúp bạn đạt được mục tiêu học tập và phát triển sự nghiệp.
@@ -455,8 +455,8 @@
         <section class="instructors-section section-padding">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
-                    <span class="section-tagline">Đội ngũ giảng viên</span>
-                    <h2 class="section-title">Gặp gỡ các giảng viên của chúng tôi</h2>
+                    <span class="section-tagline">Đội Ngũ Giảng Viên</span>
+                    <h2 class="section-title">Gặp Gỡ Các Giảng Viên Của Chúng Tôi</h2>
                     <p class="section-description">
                         Đội ngũ giảng viên tại PLT Solutions đều là những chuyên gia có kinh nghiệm,
                         tận tâm và nhiệt huyết trong việc truyền đạt kiến thức.
@@ -465,7 +465,7 @@
                 <div class="instructors-grid">
                     <div class="instructor-item" data-aos="fade-up" data-aos-delay="100">
                         <div class="instructor-image">
-                            <img src="image/instructor-1.jpg" alt="Giảng viên Mr.PLT">
+                            <img src="image/GV1.jpg" alt="Giảng viên Mr.PLT">
                         </div>
                         <h3 class="instructor-name">Mr. PLT</h3>
                         <p class="instructor-title">Trưởng phòng Kiểm thử</p>
@@ -480,9 +480,9 @@
                     </div>
                     <div class="instructor-item" data-aos="fade-up" data-aos-delay="200">
                         <div class="instructor-image">
-                            <img src="image/instructor-2.jpg" alt="Giảng viên Ms.Yen">
+                            <img src="image/GV3.png" alt="Giảng viên Ms.Ngoan">
                         </div>
-                        <h3 class="instructor-name">Ms. Yen</h3>
+                        <h3 class="instructor-name">Ms. Ngoan</h3>
                         <p class="instructor-title">Chuyên gia QA</p>
                         <p class="instructor-description">
                             Giảng viên Tin học văn phòng và Kiểm thử cơ bản.
@@ -495,9 +495,9 @@
                     </div>
                     <div class="instructor-item" data-aos="fade-up" data-aos-delay="300">
                         <div class="instructor-image">
-                            <img src="image/instructor-3.jpg" alt="Giảng viên Mr.Khanh">
+                            <img src="image/GV2.jpg" alt="Giảng viên Mr.Phuc">
                         </div>
-                        <h3 class="instructor-name">Mr. Khanh</h3>
+                        <h3 class="instructor-name">Mr. Phuc</h3>
                         <p class="instructor-title">Chuyên gia Phát triển Web</p>
                         <p class="instructor-description">
                             Giảng viên các khóa học về lập trình và phát triển ứng dụng web.
@@ -506,20 +506,6 @@
                             <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                             <a href="#" aria-label="Github"><i class="fab fa-github"></i></a>
-                        </div>
-                    </div>
-                    <div class="instructor-item" data-aos="fade-up" data-aos-delay="400">
-                        <div class="instructor-image">
-                            <img src="image/instructor-4.jpg" alt="Giảng viên Ms.Vy">
-                        </div>
-                        <h3 class="instructor-name">Ms. Vy</h3>
-                        <p class="instructor-title">Nghệ sĩ Nhiếp ảnh</p>
-                        <p class="instructor-description">
-                            Chuyên gia về nhiếp ảnh, nghệ thuật và thiết kế đồ họa.
-                        </p>
-                        <div class="instructor-social-links">
-                            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                            <a href="#" aria-label="Pinterest"><i class="fab fa-pinterest"></i></a>
                         </div>
                     </div>
                 </div>
@@ -531,8 +517,8 @@
         <section class="testimonials-section section-padding">
             <div class="container">
                 <div class="section-heading is-white" data-aos="fade-down">
-                    <span class="section-tagline">Phản hồi từ học viên</span>
-                    <h2 class="section-title">Những gì học viên của chúng tôi nói</h2>
+                    <span class="section-tagline">Phản Hồi Từ Học Viên</span>
+                    <h2 class="section-title">Những Gì Học Viên Của Chúng Tôi Nói</h2>
                     <p class="section-description">
                         Đọc những lời chia sẻ chân thực từ các học viên đã trải nghiệm và thành công cùng PLT Solutions.
                     </p>
@@ -606,8 +592,8 @@
         <section class="blog-posts-section-home section-padding">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
-                    <span class="section-tagline">Bài viết mới nhất</span>
-                    <h2 class="section-title">Kiến thức và tin tức từ Blog của chúng tôi</h2>
+                    <span class="section-tagline">Bài Viết Mới Nhất</span>
+                    <h2 class="section-title">Kiến Thức Và Tin Tức Từ Blog Của Chúng Tôi</h2>
                     <p class="section-description">
                         Cập nhật những bài viết mới nhất về xu hướng công nghệ, mẹo học tập,
                         và những thông tin hữu ích từ các chuyên gia của chúng tôi.
@@ -677,8 +663,8 @@
         <section class="partners-section section-padding">
             <div class="container">
                 <div class="section-heading" data-aos="fade-down">
-                    <span class="section-tagline">Đối tác của chúng tôi</span>
-                    <h2 class="section-title">Các công ty tin tưởng chúng tôi</h2>
+                    <span class="section-tagline">Đối Tác Của Chúng Tôi</span>
+                    <h2 class="section-title">Các Công Ty Tin Tưởng Chúng Tôi</h2>
                     <p class="section-description">
                         PLT Solutions tự hào là đối tác của nhiều doanh nghiệp hàng đầu,
                         đảm bảo chất lượng đào tạo và cơ hội việc làm tốt nhất cho học viên.
