--- a/index.html
+++ b/index.html
@@ -269,7 +269,6 @@
                         </div>
                         <div class="course-content">
                             <div class="course-meta">
-                                <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Mr PLT</span>
                                 <span class="course-rating">
                                     <i class="fas fa-star" aria-hidden="true"></i> 4.9 (250)
                                 </span>
@@ -278,12 +277,20 @@
                             <p class="course-description">
                                 Nắm vững các kỹ thuật và vận hành các công cụ kiểm thử hiện đại, tự động hóa quy trình.
                             </p>
+                            <div class="course-lessons-students">
+                                <span class="course-lessons"><i class="fas fa-play-circle" aria-hidden="true"></i> 15+ Bài giảng</span>
+                                <span class="course-students"><i class="fas fa-users" aria-hidden="true"></i> 250+ Học viên</span>
+                            </div>
                             <div class="course-footer">
-                                <span class="course-price">4.500.000VNĐ</span>
+                                <div class="course-author-price">
+                                    <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Mr PLT</span>
+                                    <span class="course-price">4.500.000VNĐ</span>
+                                </div>
                                 <a href="courses-detail/automated-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             </div>
                         </div>
                     </article>
+
                     <article class="course-item" data-aos="fade-up" data-aos-delay="200">
                         <div class="course-thumbnail">
                             <img src="image/software-testing.jpg" alt="Ảnh minh họa khóa học Kiểm Thử Phần Mềm">
@@ -293,7 +300,6 @@
                         </div>
                         <div class="course-content">
                             <div class="course-meta">
-                                <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Mr PLT</span>
                                 <span class="course-rating">
                                     <i class="fas fa-star" aria-hidden="true"></i> 4.8 (180)
                                 </span>
@@ -302,12 +308,20 @@
                             <p class="course-description">
                                 Nắm vững các kĩ năng cơ bản về Kiểm Thử Phần Mềm, phù hợp cả cho người mới bắt đầu.
                             </p>
+                            <div class="course-lessons-students">
+                                <span class="course-lessons"><i class="fas fa-play-circle" aria-hidden="true"></i> 12+ Bài giảng</span>
+                                <span class="course-students"><i class="fas fa-users" aria-hidden="true"></i> 180+ Học viên</span>
+                            </div>
                             <div class="course-footer">
-                                <span class="course-price">4.500.000VNĐ</span>
+                                <div class="course-author-price">
+                                    <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Mr PLT</span>
+                                    <span class="course-price">4.500.000VNĐ</span>
+                                </div>
                                 <a href="courses-detail/software-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             </div>
                         </div>
                     </article>
+
                     <article class="course-item" data-aos="fade-up" data-aos-delay="300">
                         <div class="course-thumbnail">
                             <img src="image/office-it.jpg" alt="Ảnh minh họa khóa học Tin Học Văn Phòng">
@@ -317,7 +331,6 @@
                         </div>
                         <div class="course-content">
                             <div class="course-meta">
-                                <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Mr PLT</span>
                                 <span class="course-rating">
                                     <i class="fas fa-star" aria-hidden="true"></i> 4.7 (210)
                                 </span>
@@ -326,13 +339,21 @@
                             <p class="course-description">
                                 Nắm vững các kĩ năng tin học văn học cơ bản (Word, Excel, Powerpoint) để làm việc hiệu quả.
                             </p>
+                            <div class="course-lessons-students">
+                                <span class="course-lessons"><i class="fas fa-play-circle" aria-hidden="true"></i> 20+ Bài giảng</span>
+                                <span class="course-students"><i class="fas fa-users" aria-hidden="true"></i> 210+ Học viên</span>
+                            </div>
                             <div class="course-footer">
-                                <span class="course-price">4.500.000VNĐ</span>
+                                <div class="course-author-price">
+                                    <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Mr PLT</span>
+                                    <span class="course-price">4.500.000VNĐ</span>
+                                </div>
                                 <a href="courses-detail/office-it.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             </div>
                         </div>
                     </article>
-                     <article class="course-item" data-aos="fade-up" data-aos-delay="400">
+
+                    <article class="course-item" data-aos="fade-up" data-aos-delay="400">
                         <div class="course-thumbnail">
                             <img src="image/basic-software-testing.jpg" alt="Ảnh minh họa khóa học Kiểm thử phần mềm căn bản">
                             <div class="course-category">
@@ -341,7 +362,6 @@
                         </div>
                         <div class="course-content">
                             <div class="course-meta">
-                                <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Ms. Yen</span>
                                 <span class="course-rating">
                                     <i class="fas fa-star" aria-hidden="true"></i> 4.6 (150)
                                 </span>
@@ -350,12 +370,20 @@
                             <p class="course-description">
                                 Khóa học cung cấp kiến thức nền tảng về kiểm thử phần mềm cho người mới bắt đầu.
                             </p>
+                            <div class="course-lessons-students">
+                                <span class="course-lessons"><i class="fas fa-play-circle" aria-hidden="true"></i> 10+ Bài giảng</span>
+                                <span class="course-students"><i class="fas fa-users" aria-hidden="true"></i> 150+ Học viên</span>
+                            </div>
                             <div class="course-footer">
-                                <span class="course-price">2.000.000VNĐ</span>
+                                <div class="course-author-price">
+                                    <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Ms. Yen</span>
+                                    <span class="course-price">2.000.000VNĐ</span>
+                                </div>
                                 <a href="courses-detail/basic-software-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             </div>
                         </div>
                     </article>
+
                     <article class="course-item" data-aos="fade-up" data-aos-delay="500">
                         <div class="course-thumbnail">
                             <img src="image/web-development.jpg" alt="Ảnh minh họa khóa học Phát triển Web">
@@ -365,7 +393,6 @@
                         </div>
                         <div class="course-content">
                             <div class="course-meta">
-                                <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Mr. Khanh</span>
                                 <span class="course-rating">
                                     <i class="fas fa-star" aria-hidden="true"></i> 4.9 (300)
                                 </span>
@@ -374,12 +401,20 @@
                             <p class="course-description">
                                 Xây dựng các trang web đẹp và tương tác cao từ cơ bản đến nâng cao.
                             </p>
+                            <div class="course-lessons-students">
+                                <span class="course-lessons"><i class="fas fa-play-circle" aria-hidden="true"></i> 25+ Bài giảng</span>
+                                <span class="course-students"><i class="fas fa-users" aria-hidden="true"></i> 300+ Học viên</span>
+                            </div>
                             <div class="course-footer">
-                                <span class="course-price">5.000.000VNĐ</span>
+                                <div class="course-author-price">
+                                    <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Mr. Khanh</span>
+                                    <span class="course-price">5.000.000VNĐ</span>
+                                </div>
                                 <a href="#" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             </div>
                         </div>
                     </article>
+
                     <article class="course-item" data-aos="fade-up" data-aos-delay="600">
                         <div class="course-thumbnail">
                             <img src="image/photography.jpg" alt="Ảnh minh họa khóa học Nhiếp ảnh">
@@ -389,7 +424,6 @@
                         </div>
                         <div class="course-content">
                             <div class="course-meta">
-                                <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Ms. Vy</span>
                                 <span class="course-rating">
                                     <i class="fas fa-star" aria-hidden="true"></i> 4.7 (120)
                                 </span>
@@ -398,9 +432,16 @@
                             <p class="course-description">
                                 Khám phá bí quyết chụp ảnh đẹp, từ bố cục đến chỉnh sửa hậu kỳ.
                             </p>
+                            <div class="course-lessons-students">
+                                <span class="course-lessons"><i class="fas fa-play-circle" aria-hidden="true"></i> 18+ Bài giảng</span>
+                                <span class="course-students"><i class="fas fa-users" aria-hidden="true"></i> 120+ Học viên</span>
+                            </div>
                             <div class="course-footer">
-                                <span class="course-price">3.000.000VNĐ</span>
-                                <a href="courses-detail/photography-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                                <div class="course-author-price">
+                                    <span class="course-author"><i class="fas fa-user" aria-hidden="true"></i> Ms. Vy</span>
+                                    <span class="course-price">3.000.000VNĐ</span>
+                                </div>
+                                <a href="./courses-detail/photography-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             </div>
                         </div>
                     </article>
