--- a/index.html
+++ b/index.html
@@ -643,16 +643,16 @@
                 <div class="blog-grid-home courses-grid">
                     <article class="blog-item-home course-item" data-aos="fade-up" data-aos-delay="100">
                         <div class="blog-thumbnail-home course-thumbnail">
-                            <img src="image/blog-1.jpg" alt="Lợi ích của kiểm thử tự động">
+                            <img src="image/blog1.png" alt="Kiểm thử tự động">
                         </div>
                         <div class="blog-content-home course-content">
                             <div class="blog-meta course-meta">
                                 <span class="blog-date"><i class="far fa-calendar-alt" aria-hidden="true"></i> 10 Tháng 6, 2025</span>
                                 <span class="blog-category"><i class="fas fa-tags" aria-hidden="true"></i> Kiểm thử</span>
                             </div>
-                            <h3 class="blog-title-home course-title"><a href="blog-detail.html">Tối ưu quy trình phát triển phần mềm với kiểm thử tự động</a></h3>
+                            <h3 class="blog-title-home course-title"><a href="blog-detail.html">Giới Thiệu Và Hướng Dẫn Sử Dụng Notion</a></h3>
                             <p class="blog-description course-description">
-                                Khám phá cách kiểm thử tự động giúp tăng tốc độ và chất lượng phần mềm.
+                                Notion là một ứng dụng quản lý công việc và ghi chú đa năng, cho phép bạn tạo ra các trang (page) linh hoạt để ghi chép, quản lý dự án, lập kế hoạch, theo dõi công việc cá nhân hoặc nhóm. Điểm mạnh của Notion là khả năng tùy biến cao và giao diện trực quan, dễ sử dụng.
                             </p>
                             <div class="blog-footer course-footer">
                                 <a href="blog-detail.html" class="btn btn-sm btn-outline-primary">Đọc thêm</a>
@@ -661,16 +661,16 @@
                     </article>
                     <article class="blog-item-home course-item" data-aos="fade-up" data-aos-delay="200">
                         <div class="blog-thumbnail-home course-thumbnail">
-                            <img src="image/blog-2.jpg" alt="Học tin học văn phòng hiệu quả">
+                            <img src="image/blog2.png" alt="Học tin học văn phòng hiệu quả">
                         </div>
                         <div class="blog-content-home course-content">
                             <div class="blog-meta course-meta">
                                 <span class="blog-date"><i class="far fa-calendar-alt" aria-hidden="true"></i> 05 Tháng 6, 2025</span>
-                                <span class="blog-category"><i class="fas fa-tags" aria-hidden="true"></i> Tin học</span>
+                                <span class="blog-category"><i class="fas fa-tags" aria-hidden="true"></i> Kiểm Thử</span>
                             </div>
-                            <h3 class="blog-title-home course-title"><a href="blog-detail.html">Bí quyết học Tin học Văn phòng hiệu quả cho người mới</a></h3>
+                            <h3 class="blog-title-home course-title"><a href="blog-detail.html">Quy Trình Tổng Quát Của Kiểm Thử Phần Mềm</a></h3>
                             <p class="blog-description course-description">
-                                Những mẹo và thủ thuật để bạn nhanh chóng thành thạo Word, Excel, PowerPoint.
+                                Kiểm thử thực chất là một quy trình. Quá trình này bắt đầu từ việc lập kế hoạch kiểm thử, sau đó là thiết kế các trường hợp kiểm thử, chuẩn bị cho việc thực thi và đánh giá kết quả thực thi cho đến khi kết thúc hoạt động kiểm thử.
                             </p>
                             <div class="blog-footer course-footer">
                                 <a href="blog-detail.html" class="btn btn-sm btn-outline-primary">Đọc thêm</a>
@@ -679,16 +679,16 @@
                     </article>
                     <article class="blog-item-home course-item" data-aos="fade-up" data-aos-delay="300">
                         <div class="blog-thumbnail-home course-thumbnail">
-                            <img src="image/blog-3.jpg" alt="Làm thế nào để trở thành tester">
+                            <img src="image/blog3.png" alt="Làm thế nào để trở thành tester">
                         </div>
                         <div class="blog-content-home course-content">
                             <div class="blog-meta course-meta">
                                 <span class="blog-date"><i class="far fa-calendar-alt" aria-hidden="true"></i> 01 Tháng 6, 2025</span>
-                                <span class="blog-category"><i class="fas fa-tags" aria-hidden="true"></i> Hướng nghiệp</span>
+                                <span class="blog-category"><i class="fas fa-tags" aria-hidden="true"></i> Marketing Online</span>
                             </div>
-                            <h3 class="blog-title-home course-title"><a href="blog-detail.html">Làm thế nào để bắt đầu sự nghiệp Tester từ con số 0</a></h3>
+                            <h3 class="blog-title-home course-title"><a href="blog-detail.html">Cách viết bài chuẩn SEO lĩnh vực du lịch hiệu quả</a></h3>
                             <p class="blog-description course-description">
-                                Hướng dẫn từng bước cho những ai muốn chuyển mình sang ngành kiểm thử phần mềm.
+                                Bài viết quảng cáo, giới thiệu sản phẩm, dịch vụ là một trong những công cụ phục vụ đắc lực đối với mục đích kinh doanh đang được nhiều đơn vị khai thác du lịch áp dụng. Song thực tế cách viết bài chuẩn SEO lĩnh vực du lịch vẫn còn khá máy móc khi tập trung chủ yếu vào những mô típ đã quá quen thuộc không còn gây được hứng thú cho khách hàng như giới thiệu tour du lịch, địa điểm vui chơi giải trí hay giá thành, tiện ích mà không có sự mới lạ, khác biệt.
                             </p>
                             <div class="blog-footer course-footer">
                                 <a href="blog-detail.html" class="btn btn-sm btn-outline-primary">Đọc thêm</a>
